[package]
name = "pixels-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
tokio = { version= "1.28.2", features=["full"]}
futures = "0.3.28"
rand = "0.8.5"
clap = {version="4.3.3", features=["derive"]}
futures-util = "0.3.28"
itertools = "0.10.5"